# cargo-clear

./: Cargo.toml  README.md
src/: main.rs
